<resources>
    <string name="app_name">Learning Hiragana</string>
    <string name="lesson_1">Hiragana Chart 1</string>
    <string name="lesson_2">Hiragana Chart 2</string>
    <string name="lesson_3">Hiragana Chart 3</string>
    <string name="lesson_4">Basic Phrases/\nWords 1</string>
    <string name="lesson_5">Basic Phrases/\nWords 2</string>
    <string name="lesson_6">Basic Phrases/\nWords 3</string>
    <string name="pause" />
    <string name="play" />
    <string name="aiueo">あいうえお a,i,u,e,o</string>
    <string name="kakikukeko">かきくけこ ka,ki,ku,ke,ko</string>
    <string name="sashisuseso">さしすせそ sa,shi,su,se,so</string>
    <string name="tachitsuteto">たちつてと ta,chi,tsu,te,to</string>
    <string name="naninuneno">なにぬねの na,ni,nu,ne,no</string>
    <string name="hahifuheho">はひふへほ ha,hi,fu,he,ho</string>
    <string name="mamimumemo">まみむめも ma,mi,mu,me,mo</string>
    <string name="yayuyo">やゆよ ya,yu,yo</string>
    <string name="rarirurero">らりるれろ ra,ri,ru,re,ro</string>
    <string name="waon">わをん wa,o,n</string>
    <string name="home">home</string>
    <string name="gagigugego">がぎぐげご ga,gi,gu,ge,go</string>
    <string name="zajizuzezo">ざじずぜぞ za,ji,zu,ze,zo</string>
    <string name="dajizudedo">だぢづでど da,ji,zu,de,do</string>
    <string name="babibubebo">ばびぶべぼ ba,bi,bu,be,bo</string>
    <string name="papipupepo">ぱぴぷぺぽ pa,pi,pu,pe,po</string>
    <string name="kyakyukyo">きゃきゅきょ kya,kyu,kyo</string>
    <string name="gyagyugyo">ぎゃぎゅぎょ gya,gyu,gyo</string>
    <string name="shashusho">しゃしゅしょ sha,shu,sho</string>
    <string name="jajujo">じゃじゅじょ ja,ju,jo</string>
    <string name="chachucho">ちゃちゅちょ cha,chu,cho</string>
    <string name="nyanyunyo">にゃにゅにょ nya,nyu,nyo</string>
    <string name="hyahyuhyo">ひゃひゅひょ hya,hyu,hyo</string>
    <string name="byabyubyo">びゃびゅびょ bya,byu,byo</string>
    <string name="ryaryuryo">りゃりゅりょ rya,ryu,ryo</string>
    <string name="pyapyupyo">ぴゃぴゅぴょ pya,pyu,pyo</string>
    <string name="myamyumyo">みゃみゅみょ mya,myu,myo</string>
    <string name="ohayo">おはよございます \n o-ha-yo go-za-i-ma-su \n good morning</string>
    <string name="konichiwa">こにちわ \n ko-ni-chi-wa \n good afternoon/hello</string>
    <string name="konbanwa">こんばんわ \n ko-n-ba-n-wa \n good evening</string>
    <string name="oyasumi">おやすみ \n o-ya-su-mi-na-sa-i \n good night</string>
    <string name="gomenasai">ごめなさい \n go-me-na-sai \n i am sorry</string>
    <string name="yoroshiku">よろしくおねがいします \n yo-ro-shi-ku o-ne-ga-i-shi-ma-su \n please treat me well/\nnice to meet you</string>
    <string name="ogenki">おげんきですか \n o-ge-n-ki de-su \n how are you?</string>
    <string name="wakarimashita">わかりました \n wa-ka-ri-ma-shi-ta \n i understand</string>
    <string name="wakarimasen">わかりません \n wa-ka-ri-ma-se-n \n i do not understand</string>
    <string name="onamae">おなまえわなんですか \n o-na-ma-e wa na-n de-su ka \n what is your name?</string>
    <string name="oikutsu">おいくつ \n o-i-ku-tsu \n how old are you?</string>
    <string name="sumimasen">すみません \n su-mi-ma-se-n \n excuse me</string>
    <string name="hajimemashite">はじめまして \n ha-ji-me-ma-shi-te \n nice to meet you</string>
    <string name="sayonara">さよなら \n sa-yo-na-ra \n good bye</string>
    <string name="dozo">どぞ \n do-zo \n after you</string>
    <string name="eki">えきわどこですか \n e-ki wa do-ko de-su-ka \n where is the station?</string>
    <string name="domo">ども \n do-mo \n thank you/hello/goodbye</string>
    <string name="hai">はい \n ha-i \n yes</string>
    <string name="iie">いいえ \n i-i-e \n no</string>
    <string name="koreikura">これわいくらですか \n ko-re wa i-ku-ra de-su-ka \n how much is this?</string>
    <string name="soreikura">それわいくらですか \n so-re wa i-ku-ra de-su-ka \n how much is that?</string>
    <string name="areikura">あれわいくらですか \n a-re wa i-ku-ra de-su-ka \n how is that (over there)?</string>
    <string name="jamata">じゃまた \n ja ma-ta \n see you soon</string>
    <string name="arigato">ありがとうございます \n a-ri-ga-to go-za-i-ma-su \n thank you</string>
    <string name="mizu">みずおねがいします \n mi-zu o-ne-ga-i-shi-ma-su \n water please</string>
    <string name="help">たすけてください \n ta-su-ke-te ku-da-sa-i \n help please</string>
    <string name="waifai">わいふぁいわむりょうですか \n wa-i-fu-a-i mu-ryo-u de-su ka? \n is the wi-fi free?</string>
    <string name="menu">めにゅうおねがいします \n me-nyu-u o-ne-ga-i-shi-ma-su \n menu please</string>
    <string name="eigomenu">えいごのめにゅうおねがいします \n ei-go no me-nyu-u o-ne-ga-i-shi-ma-su \n do you have an english menu?</string>
    <string name="check">おかいけいをおねがいします \n o-ka-i-ke-i o o-ne-ga-i-shi-ma-su \n could i have the check please?</string>
    <string name="creditcard">くれじっとかあどわつかえますか \n ku-re-ji-t-to ka-a-do wa tsu-ka-e-ma-su-ka \n do you take credit card?</string>
    <string name="shashin">しゃしんおとってもらえませんか \n sha-shi-n o to-t-te mo-ra-i-ma-se-n-ka \n could you take a picture for me please?</string>
    <string name="map">ちずありますか \n chi-zu a-ri-ma-su-ka \n could i get a map?</string>
    <string name="reservation">よやくをしたのですが \n yo-ya-ku o shi-ta no de-su ga \n i have a reservation</string>
    <string name="eigo">えいごをはなせえますか \n ei-go o ha-na-se-ma-su-ka? \n do you speak english?</string>
    <string name="koreokudasai">これおください \n ko-re o ku-da-sa-i \n I would like this</string>
    <string name="quiz">Quiz</string>
    <string name="answer_3">answer 3</string>
    <string name="answer_4">answer 4</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_1">answer 1</string>
    <string name="score">Score</string>
    <string name="question">question</string>
</resources>
