<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main6Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Lesson 5"
                android:textSize="40sp" />

            <Button
                android:id="@+id/hajimemashite"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/hajimemashite"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sayonara"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sayonara"
                android:textSize="25sp" />

            <Button
                android:id="@+id/dozo"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/dozo"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eki"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/eki"
                android:textSize="25sp" />

            <Button
                android:id="@+id/domo"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/domo"
                android:textSize="25sp" />

            <Button
                android:id="@+id/hai"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/hai"
                android:textSize="25sp" />

            <Button
                android:id="@+id/iie"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/iie"
                android:textSize="25sp" />

            <Button
                android:id="@+id/koreikura"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/koreikura"
                android:textSize="25sp" />

            <Button
                android:id="@+id/soreikura"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/soreikura"
                android:textSize="25sp" />

            <Button
                android:id="@+id/areikura"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/areikura"
                android:textSize="25sp" />

            <Button
                android:id="@+id/jamata"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/jamata"
                android:textSize="25sp" />

            <Button
                android:id="@+id/arigato"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/arigato"
                android:textSize="25sp" />

            <Button
                android:id="@+id/home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="140dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>