<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main7Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Lesson 6"
                android:textSize="40sp" />

            <Button
                android:id="@+id/mizu"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/mizu"
                android:textSize="25sp" />

            <Button
                android:id="@+id/help"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/help"
                android:textSize="25sp" />

            <Button
                android:id="@+id/waifai"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/waifai"
                android:textSize="25sp" />

            <Button
                android:id="@+id/menu"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eigomenu"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/eigomenu"
                android:textSize="25sp" />

            <Button
                android:id="@+id/check"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/check"
                android:textSize="25sp" />

            <Button
                android:id="@+id/creditcard"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/creditcard"
                android:textSize="25sp" />

            <Button
                android:id="@+id/shashin"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/shashin"
                android:textSize="25sp" />

            <Button
                android:id="@+id/map"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/map"
                android:textSize="25sp" />

            <Button
                android:id="@+id/reservation"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/reservation"
                android:textSize="25sp" />

            <Button
                android:id="@+id/eigo"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/eigo"
                android:textSize="25sp" />

            <Button
                android:id="@+id/koreokudasai"
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/koreokudasai"
                android:textSize="25sp" />

            <Button
                android:id="@+id/home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="140dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home"
                android:textSize="30sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>