<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main5Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Lesson 4"
                android:textSize="40sp" />

            <Button
                android:id="@+id/ohayo"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/ohayo"
                android:textSize="25sp" />

            <Button
                android:id="@+id/konichiwa"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/konichiwa"
                android:textSize="25sp" />

            <Button
                android:id="@+id/konbanwa"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/konbanwa"
                android:textSize="25sp" />

            <Button
                android:id="@+id/yoroshiku"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/yoroshiku"
                android:textSize="25sp" />

            <Button
                android:id="@+id/oyasumi"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/oyasumi"
                android:textSize="25sp" />

            <Button
                android:id="@+id/gomenasai"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/gomenasai"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ogenki"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/ogenki"
                android:textSize="25sp" />

            <Button
                android:id="@+id/wakarimashita"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/wakarimashita"
                android:textSize="25sp" />

            <Button
                android:id="@+id/wakarimasen"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/wakarimasen"
                android:textSize="25sp" />

            <Button
                android:id="@+id/onamae"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/onamae"
                android:textSize="25sp" />

            <Button
                android:id="@+id/oikutsu"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/oikutsu"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sumimasen"
                android:layout_width="320dp"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sumimasen"
                android:textSize="25sp" />

            <Button
                android:id="@+id/home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="140dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>